abovevtt.css
/* ... */
.note-text h2::after {
    background-color: var(--h2-underline, var(--header-underline, #47D18C));
}
.note-text h3::after {
    background-color: var(--h3-underline, var(--header-underline, #47D18C));
}
/* END -  CSS header variables */

/* START - Underlines compendium links */
.note-text a:not(.ddb-lightbox-outer, h3 > a):hover,
.note-text a:not(.ddb-lightbox-outer, h3 > a):focus {
    text-decoration: underline;
}
/* END - Underlines Compendium links */


/** TEMP new .text--quote-box type for compendium content - needs to be added to compiled **/

.note-text .text--quote-box.compendium-indented-callout-.text--quote-box {
    background: transparent !important;
    font-size: 16px !important;
    border-left: 4px solid #e0dcdc !important;
    border-right: none !important;
    padding: 10px 20px !important;
    margin: 30px 0 !important;
}

.note-text .text--quote-box.compendium-indented-callout-.text--quote-box::before {
    content: none !important;
}

.note-text .text--quote-box.compendium-indented-callout-.text--quote-box::after {
    content: none !important;
}  

/** END TEMP new .text--quote-box type **/


.note-text h6, {
    font-size: 14px !important;
    font-weight: bold !important;
}


.note-text h1 {
    font-size: 32px!important;
    font-weight: 400!important
}

.note-text h2 {
    font-size: 26px!important;
    font-weight: 400!important;
    clear: both
}

.note-text h3 {
    font-size: 22px!important;
    font-weight: 400!important;
    clear: both
}

.note-text h4 {
    font-size: 18px!important;
    font-weight: 700!important
}

.note-text h5 {
    font-size: 16px!important;
    font-weight: 700!important
}


.note-text .rules-text a {
    color: #129b54!important;
    transition: .3s
}

.note-text .rules-text p:first-child {
    font-size: 16px
}


.note-text .stat-block-background {
    background-repeat: no-repeat;
    -webkit-box-shadow: 0 5px 8px 0 #aaa;
    -moz-box-shadow: 0 5px 8px 0 #aaa;
    box-shadow: 0 5px 8px 0 #aaa;
    background-position: top!important;
    background-image: url(https://media-stg.dndbeyond.com/compendium-images/tcoe/0gqawlEa2tjXGxpc/mm_statbg_sm.jpg)!important
}

.note-text .stat-block-background:after,
.note-text .stat-block-background:before {
    background-image: url(https://media-stg.dndbeyond.com/compendium-images/cm/c43LH2y2Gcaxb3V2/MMStatBar_lrg.png)!important
}


.note-text .block-torn-paper,
.note-text .epigraph,
.note-text .epigraph--with-author {
    overflow: auto;
    background: none;
    color: var(--theme-quote-fg-color,#242527);
    margin: 40px 0;
    line-height: 1.6;
    font-size: 14px;
    border: solid transparent;
    border-width: 20px 10px;
    border-image-source: var(--theme-quote-border,url(https://media.dndbeyond.com/ddb-compendium-client/5f1f1d66d16be68cf09d6ca172f8df92.png));
    border-image-repeat: repeat;
    border-image-slice: 20 10 20 10 fill;
    padding: 10px;
    position: relative
}

.note-text .epigraph--with-author p:last-child {
    font-style: italic;
    text-align: right
}

.note-text .rules-text {
    overflow: auto;
    display: block;
    margin: 30px 0;
    line-height: 1.6;
    font-size: 14px;
    color: var(--theme-rules-text-fg-color,#242527);
    border-color: transparent;
    border-style: solid;
    border-width: 15px 20px;
    border-image-repeat: repeat;
    border-image-slice: 21 30 21 30 fill;
    background-color: transparent;
    padding: 20px 10px 10px;
    position: relative;
    border-image-source: var(--theme-rules-text-border,url(https://media.dndbeyond.com/ddb-compendium-client/463d4668370589a1a73886611645df7e.png));
    -webkit-filter: drop-shadow(0 5px 8px #ccc);
    filter: drop-shadow(0 5px 8px #ccc)
}

.note-text .rules-text p:first-child {
    text-transform: uppercase;
    font-weight: 700
}

.note-text .read-aloud-text {
    overflow: auto;
    display: block;
    margin: 30px 0;
    line-height: 1.6;
    font-size: 14px;
    color: var(--theme-read-aloud-fg-color,#242527);
    border: 8px solid transparent;
    border-image-repeat: repeat;
    border-image-slice: 8 8 8 8 fill;
    background-color: transparent;
    padding: 20px 20px 10px!important;
    position: relative;
    border-image-source: var(--theme-read-aloud-border,url(https://media.dndbeyond.com/ddb-compendium-client/146117d0758df55ed5ff299b916e9bd1.png))
}

.note-text iframe.journal-site-embed{
    display:block;
    position:absolute;
    width:100%;
    height:100%;
    top: 0px;
}

.visibility-container ~ .note-text iframe.journal-site-embed{
    top: 42px;
}


:root .custom-stat-block{
    --theme-page-fg-color: #242527;
}
/* END - Default text color */
* .custom-stat-block{
    font-family: Roboto, Helvetica, sans-serif;
}

.custom-stat-block .Basic-Text-Frame {
    clear: both;
    border: 1px solid #d4d0ce;
    background: white;
    padding: 15px
}

@media(min-width: 768px) {
    .custom-stat-block .Basic-Text-Frame {
        -webkit-column-count:2;
        column-count: 2
    }
}
.note-text .one-column-stat,
.custom-stat-block .one-column-stat {
    -webkit-column-count:1;
    column-count: 1;
}
.custom-stat-block .Basic-Text-Frame-2 {
    border: 1px solid #d4d0ce;
    background: white;
    padding: 15px
}

@media(min-width: 768px) {
    .custom-stat-block .Basic-Text-Frame-2 {
        float:right;
        margin: 30px 0 15px 20px;
        width: 410px
    }
}

.custom-stat-block .Basic-Text-Frame-2 .compendium-image-center {
    margin-bottom: 20px;
    display: block
}

.custom-stat-block .Basic-Text-Frame-3 {
    border: 1px solid #d4d0ce;
    background: white;
    padding: 15px
}

@media(min-width: 768px) {
    .custom-stat-block .Basic-Text-Frame-3 {
        float:left;
        margin: 30px 20px 15px 0;
        width: 410px
    }
}

.custom-stat-block .Basic-Text-Frame-3 .compendium-image-center {
    margin-bottom: 20px;
    display: block
}
/* ... */

